--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
   "devDependencies": {
     "@nx/js": "18.2.1",
+    "@nx/react": "^18.2.1",
     "@nx/workspace": "18.2.1",
     "nx": "18.2.1"
+  },
+  "dependencies": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
