--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "@babel/preset-react": "^7.14.5",
     "@nx/eslint": "18.2.1",
     "@nx/eslint-plugin": "18.2.1",
-    "@nx/jest": "18.2.1",
+    "@nx/jest": "^18.2.1",
     "@nx/js": "18.2.1",
     "@nx/react": "^18.2.1",
     "@nx/web": "18.2.1",
     "@nx/webpack": "18.2.1",
     "@nx/workspace": "18.2.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@stylexjs/eslint-plugin": "^0.5.1",
+    "@stylexjs/webpack-plugin": "^0.5.1",
     "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.8.0",
     "@swc/cli": "~0.1.62",
@@ -50,6 +52,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@stylexjs/stylex": "^0.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.11.2",
