--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "nx": "18.2.1",
     "postcss": "^8.4.38",
     "prettier": "^2.6.2",
+    "prisma": "^5.11.0",
     "react-refresh": "^0.10.0",
     "tailwindcss": "3.2.7",
     "ts-jest": "^29.1.0",
