--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nx/eslint-plugin": "18.2.1",
     "@nx/jest": "^18.2.1",
     "@nx/js": "18.2.1",
+    "@nx/node": "^18.2.1",
     "@nx/react": "^18.2.1",
     "@nx/web": "18.2.1",
     "@nx/webpack": "18.2.1",
