--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nx/eslint-plugin": "18.2.1",
     "@nx/jest": "^18.2.1",
     "@nx/js": "18.2.1",
+    "@nx/node": "^18.2.1",
     "@nx/react": "^18.2.1",
     "@nx/web": "18.2.1",
     "@nx/webpack": "18.2.1",
@@ -45,6 +46,7 @@
     "nx": "18.2.1",
     "postcss": "^8.4.38",
     "prettier": "^2.6.2",
+    "prisma": "^5.11.0",
     "react-refresh": "^0.10.0",
     "tailwindcss": "3.2.7",
     "ts-jest": "^29.1.0",
