--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
+    "@nx/esbuild": "18.2.1",
     "@nx/eslint": "18.2.1",
     "@nx/eslint-plugin": "18.2.1",
     "@nx/jest": "^18.2.1",
@@ -35,6 +36,7 @@
     "@typescript-eslint/parser": "^7.3.0",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.4.1",
+    "esbuild": "^0.19.2",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "2.27.5",
@@ -43,6 +45,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "nx": "18.2.1",
     "postcss": "^8.4.38",
     "prettier": "^2.6.2",
@@ -56,9 +59,16 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@fastify/autoload": "~5.7.1",
+    "@fastify/sensible": "~5.2.0",
+    "@reduxjs/toolkit": "^2.2.2",
     "@stylexjs/stylex": "^0.5.1",
+    "axios": "^1.6.0",
+    "fastify": "~4.13.0",
+    "fastify-plugin": "~4.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "6.11.2",
     "tslib": "^2.3.0"
   }
