--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@ems/shared": ["source/shared/src/index.ts"]
+      "@ems/shared": ["source/shared/src/index.ts"],
+      "@solutionave/shared": ["source/shared/src/index.ts"],
+      "@solutionave/theme": ["source/theme/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
