--- a/package.json
+++ b/package.json
@@ -3,21 +3,24 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "nx serve web"
+    "web": "nx serve web",
+    "api": "nx serve api",
+    "dev": "nx run-many --target=serve --projects=web,api"
   },
   "private": true,
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
-    "@nx/esbuild": "18.2.1",
+    "@nx/esbuild": "^16.2.2",
     "@nx/eslint": "18.2.1",
-    "@nx/eslint-plugin": "18.2.1",
-    "@nx/jest": "^18.2.1",
+    "@nx/eslint-plugin": "^16.2.2",
+    "@nx/jest": "^16.2.2",
     "@nx/js": "18.2.1",
-    "@nx/node": "^18.2.1",
-    "@nx/react": "^18.2.1",
-    "@nx/web": "18.2.1",
-    "@nx/webpack": "18.2.1",
+    "@nx/node": "^16.2.2",
+    "@nx/react": "^16.2.2",
+    "@nx/vite": "^16.2.2",
+    "@nx/web": "^16.2.2",
+    "@nx/webpack": "^16.2.2",
     "@nx/workspace": "18.2.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@stylexjs/eslint-plugin": "^0.5.1",
@@ -34,6 +37,8 @@
     "@types/react-dom": "18.2.14",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
     "@typescript-eslint/parser": "^7.3.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitest/ui": "^1.3.1",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.4.1",
     "esbuild": "^0.19.2",
@@ -46,6 +51,7 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
+    "jsdom": "~22.1.0",
     "nx": "18.2.1",
     "postcss": "^8.4.38",
     "prettier": "^2.6.2",
@@ -56,20 +62,30 @@
     "ts-node": "10.9.1",
     "typescript": "~5.4.2",
     "url-loader": "^4.1.1",
+    "verdaccio": "^5.0.4",
+    "vite": "~5.0.0",
+    "vite-plugin-dts": "~2.3.0",
+    "vitest": "^1.3.1",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "@fastify/autoload": "~5.7.1",
     "@fastify/sensible": "~5.2.0",
+    "@prisma/client": "^5.11.0",
     "@reduxjs/toolkit": "^2.2.2",
     "@stylexjs/stylex": "^0.5.1",
     "axios": "^1.6.0",
+    "clsx": "^2.1.0",
     "fastify": "~4.13.0",
     "fastify-plugin": "~4.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "6.11.2",
     "tslib": "^2.3.0"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
