--- a/source/shared/project.json
+++ b/source/shared/project.json
@@ -3,7 +3,31 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "source/shared/src",
   "projectType": "library",
+  "release": {
+    "version": {
+      "generatorOptions": {
+        "packageRoot": "dist/{projectRoot}",
+        "currentVersionResolver": "git-tag"
+      }
+    }
+  },
   "tags": [],
-  "// targets": "to see all targets run: nx show project shared --web",
-  "targets": {}
+  "targets": {
+    "build": {
+      "executor": "@nx/js:tsc",
+      "outputs": ["{options.outputPath}"],
+      "options": {
+        "outputPath": "dist/source/shared",
+        "tsConfig": "source/shared/tsconfig.lib.json",
+        "packageJson": "source/shared/package.json",
+        "main": "source/shared/src/index.ts",
+        "assets": ["source/shared/*.md"]
+      }
+    },
+    "nx-release-publish": {
+      "options": {
+        "packageRoot": "dist/{projectRoot}"
+      }
+    }
+  }
 }
