--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
-    "@nx/esbuild": "^16.2.2",
+    "@nx/esbuild": "18.2.1",
     "@nx/eslint": "18.2.1",
-    "@nx/eslint-plugin": "^16.2.2",
-    "@nx/jest": "^16.2.2",
+    "@nx/eslint-plugin": "18.2.1",
+    "@nx/jest": "18.2.1",
     "@nx/js": "18.2.1",
-    "@nx/node": "^16.2.2",
-    "@nx/react": "^16.2.2",
-    "@nx/vite": "^16.2.2",
-    "@nx/web": "^16.2.2",
-    "@nx/webpack": "^16.2.2",
+    "@nx/node": "18.2.1",
+    "@nx/react": "18.2.1",
+    "@nx/vite": "18.2.1",
+    "@nx/web": "18.2.1",
+    "@nx/webpack": "18.2.1",
     "@nx/workspace": "18.2.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@stylexjs/eslint-plugin": "^0.5.1",
@@ -33,15 +33,15 @@
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14",
+    "@types/react": "18.2.24",
+    "@types/react-dom": "18.2.9",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
     "@typescript-eslint/parser": "^7.3.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "@vitest/ui": "^1.3.1",
+    "@vitejs/plugin-react-swc": "3.6.0",
+    "@vitest/ui": "0.34.7",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.4.1",
-    "esbuild": "^0.19.2",
+    "esbuild": "0.19.12",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "2.27.5",
@@ -51,7 +51,7 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
-    "jsdom": "~22.1.0",
+    "jsdom": "22.1.0",
     "nx": "18.2.1",
     "postcss": "^8.4.38",
     "prettier": "^2.6.2",
@@ -63,9 +63,9 @@
     "typescript": "~5.4.2",
     "url-loader": "^4.1.1",
     "verdaccio": "^5.0.4",
-    "vite": "~5.0.0",
-    "vite-plugin-dts": "~2.3.0",
-    "vitest": "^1.3.1",
+    "vite": "5.2.7",
+    "vite-plugin-dts": "2.3.0",
+    "vitest": "0.34.6",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
@@ -74,7 +74,7 @@
     "@prisma/client": "^5.11.0",
     "@reduxjs/toolkit": "^2.2.2",
     "@stylexjs/stylex": "^0.5.1",
-    "axios": "^1.6.0",
+    "axios": "1.6.8",
     "clsx": "^2.1.0",
     "fastify": "~4.13.0",
     "fastify-plugin": "~4.5.0",
@@ -89,3 +89,4 @@
     "includedScripts": []
   }
 }
+
