--- a/package.json
+++ b/package.json
@@ -3,18 +3,22 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "nx serve web"
+    "web": "nx serve web",
+    "api": "nx serve api",
+    "dev": "nx run-many --target=serve --projects=web,api"
   },
   "private": true,
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
+    "@nx/esbuild": "18.2.1",
     "@nx/eslint": "18.2.1",
     "@nx/eslint-plugin": "18.2.1",
-    "@nx/jest": "^18.2.1",
+    "@nx/jest": "18.2.1",
     "@nx/js": "18.2.1",
-    "@nx/node": "^18.2.1",
-    "@nx/react": "^18.2.1",
+    "@nx/node": "18.2.1",
+    "@nx/react": "18.2.1",
+    "@nx/vite": "18.2.1",
     "@nx/web": "18.2.1",
     "@nx/webpack": "18.2.1",
     "@nx/workspace": "18.2.1",
@@ -29,12 +33,15 @@
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14",
+    "@types/react": "18.2.24",
+    "@types/react-dom": "18.2.9",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
     "@typescript-eslint/parser": "^7.3.0",
+    "@vitejs/plugin-react-swc": "3.6.0",
+    "@vitest/ui": "0.34.7",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.4.1",
+    "esbuild": "0.19.12",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "2.27.5",
@@ -43,6 +50,8 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
+    "jsdom": "22.1.0",
     "nx": "18.2.1",
     "postcss": "^8.4.38",
     "prettier": "^2.6.2",
@@ -53,13 +62,31 @@
     "ts-node": "10.9.1",
     "typescript": "~5.4.2",
     "url-loader": "^4.1.1",
+    "verdaccio": "^5.0.4",
+    "vite": "5.2.7",
+    "vite-plugin-dts": "2.3.0",
+    "vitest": "0.34.6",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@fastify/autoload": "~5.7.1",
+    "@fastify/sensible": "~5.2.0",
+    "@prisma/client": "^5.11.0",
+    "@reduxjs/toolkit": "^2.2.2",
     "@stylexjs/stylex": "^0.5.1",
+    "axios": "1.6.8",
+    "clsx": "^2.1.0",
+    "fastify": "~4.13.0",
+    "fastify-plugin": "~4.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "6.11.2",
     "tslib": "^2.3.0"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
+
