--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
   },
   "dependencies": {
     "@fastify/autoload": "~5.7.1",
+    "@fastify/cors": "^9.0.1",
     "@fastify/sensible": "~5.2.0",
     "@prisma/client": "^5.11.0",
     "@reduxjs/toolkit": "^2.2.2",
@@ -89,4 +90,3 @@
     "includedScripts": []
   }
 }
-
